hphp/hack/test/typecheck/coeffects/strict-contexts/controlled_callee.php.exp
File "controlled_callee.php", line 26, characters 3-10:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "controlled_callee.php", line 23, characters 51-76:
  From this declaration, the context of this function body provides the capability set {AccessGlobals, WriteProperty}
  File "controlled_callee.php", line 3, characters 19-28:
  But the function being called requires the capability set {ReadGlobals, System, WriteProperty}
